--- a/noagame/package.json
+++ b/noagame/package.json
@@ -14,6 +14,7 @@
     "@babylonjs/core": "^4.2.0",
     "@babylonjs/inspector": "^4.2.0",
     "autoprefixer": "^10.3.4",
+    "body-scroll-lock": "^4.0.0-beta.0",
     "noa-engine": "^0.30.0",
     "perlin-noise-3d": "^0.5.4",
     "postcss-cli": "^8.3.1",
