--- a/noagame/package.json
+++ b/noagame/package.json
@@ -28,6 +28,7 @@
     "voxel-crunch": "^0.2.1"
   },
   "devDependencies": {
+    "@types/body-scroll-lock": "^3.1.0",
     "webpack": "^5.39.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
